--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "form-data": "^2.5.1",
     "googleapis": "^39.2.0",
+    "node-fetch": "^2.6.0",
     "readline": "^1.3.0",
     "request": "^2.88.0",
     "socket.io": "^2.2.0"
