--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "dashboard.js",
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.1",
