--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "readline": "^1.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "stripe": "^7.13.0"
   },
   "devDependencies": {},
   "scripts": {
