--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "form-data": "^2.5.1",
     "googleapis": "^39.2.0",
+    "log-timestamp": "^0.3.0",
     "mongodb": "^3.3.4",
     "node-fetch": "^2.6.0",
     "readline": "^1.3.0",
