--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "dashboard.js",
   "dependencies": {
+    "busboy": "^0.3.1",
+    "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.2",
     "express": "^4.17.1",
@@ -11,7 +13,9 @@
     "googleapis": "^39.2.0",
     "log-timestamp": "^0.3.0",
     "mongodb": "^3.3.4",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.3.1",
     "readline": "^1.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
