--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,19 @@
         {
             "type": "node",
             "request": "launch",
+            "name": "nodemon",
+            "runtimeExecutable": "nodemon",
+            "program": "${workspaceFolder}/dashboard.js",
+            "restart": true,
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "skipFiles": [
+                "<node_internals>/**"
+            ]
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Stripe",
             "program": "${workspaceFolder}/stripe.js",
             "skipFiles": [
