--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dashboard.js",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "busboy": "^0.3.1",
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.4",
