--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "busboy": "^0.3.1",
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.4",
+    "discord.js": "^11.5.1",
     "ejs": "^2.7.2",
     "express": "^4.17.1",
     "form-data": "^2.5.1",
